# osmanafan

./: Cargo.toml  README.md
assets/css/: style.css
src/: main.rs
src/controllers/: about.rs  home.rs  mod.rs
src/routes/: mod.rs
templates/: footer.hbs  layout.hbs  navbar.hbs
templates/about/: index.hbs
templates/home/: index.hbs
